--- a/views/editaccount.ejs
+++ b/views/editaccount.ejs
@@ -2,175 +2,141 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/login.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title><%= cloudname %> | <%= lang["Edit-Account"] %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
         body {
-    background-color: #d2d3db;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+            background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
+            width: 98vw;
+            height: 98vh;
+        }
 
-h1 {
-    color: #5D3FD3;
-    margin-top: 10%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: xxx-large;
+        .flex-container {
+            display: flex;
+            width: 100%;
+            height: 95%;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+        }
 
-}
+        .editaccount {
+            width: 35%;
+            height: 40%;
+            background-color: #111111;
+            border-radius: 50px;
+            align-items: center;
+            justify-content: center;
+            align-items: center;
+        }
 
-.subtitle {
-    color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: x-large;
-}
+        .editaccount > h1, .editaccount > h2, .editaccount > h3, h3 {
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            color: #1f74cc;
+            line-height: 40%;
+        }
 
-.footer {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
-    bottom: 0;
-    width: 100%;
-    /* Height of the footer*/
-    height: 40px;
-    background: black;
-    color: white;
-    font-family: "Montserrat", sans-serif;
-    text-align: center;
-}
+        .editaccount > form > label {
+            display: flex;
+            justify-content: center;
+            color: #1f74cc;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-p {
-    color: #5D3FD3;
-    margin-top: 5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-}
+        input {
+            height: 20%;
+            border-radius: 40px;
+            border: none;
+            display: flex;
+            justify-self: center;
+            margin: auto;
+            font-size: 100%;
+            padding-left: 2%;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
 
-label[for="newname"] {
-    color: #5D3FD3;
-    margin-top: 5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
+       form {
+            width: 100%;
+            height: 50%;
+        }
 
-}
+        button {
+            margin: auto;
+            height: 20%;
+            width: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #1f74cc;
+            border-radius: 20px;
+            font-size: 20px;
+            color: white;
+            border: none;
+            transition-duration: 0.4s;
+        }
 
-input[id="newname"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
+        button:hover {
+            height: 21%;
+            width: auto + 1%;
+            color:#1f74cc;
+            background-color: white;
+        }
 
-input[id="newemail"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
+        .footer {
+            width: 40%;
+            height: 5%;
+            background-color: black;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-button[id="rename"] {
-    color: white;
-    height: 60px;
-    width: 250px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
+        a:link, a:visited, a:hover, a:active {
+            color: #1f74cc;
+            text-decoration: none;
+            background-color: transparent;
+        }
 
-button[id="rename"]:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-::-webkit-input-placeholder {
-    text-align: center;
-  }
-  
-  :-moz-placeholder {
-    text-align: center;
-  }
-  :-ms-input-placeholder {  
-    text-align: center; 
- }
+        @media screen and (max-width: 426px) {
+            .editaccount {
+                width: 70%;
+                height: 30%;
+            }
 
-
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
     </style>
-    <h1><%= cloudname %></h1>
-    <h2 class="subtitle"> <%= lang["Edit"] %> <%= account %> </h2>
-    <% let editurl = editaccurl + account%> 
-    <form action=<%= editurl %> method="post">
-        <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
-        <label for="newname"><span class="material-icons">edit</span>&nbsp; <%= lang["New-Account"] %></label>
-        <input type="text", id="newname", name="newname" required></input>
-        <label for="newname"><span class="material-icons">edit</span>&nbsp; <%= lang["New-Email"] %></label>
-        <input type="email", id="newemail", name="newemail" required></input>
-        <button type="submit" id="rename"><span class="material-icons">edit</span>&nbsp; <%= lang["Edit-Account"] %></button>
-    </form>
-    <p>*  <%= lang["Pfp-Powered-By"] %></p>
-    <footer>
-               <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
-    
-    </footer>
+    <div class="flex-container">
+        <div class="editaccount">
+            <h1><%= cloudname %></h1>
+            <h2><%= lang["Edit"] %> <%= account %> </h2>
+            <% let editurl = editaccurl + account%> 
+            <form action=<%= editurl %> method="post">
+                <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
+                <label for="newname"><i class="fa-solid fa-pen-to-square"></i>&nbsp; <%= lang["New-Account"] %></label>
+                <input type="text", id="newname", name="newname" required></input>
+                <label for="newname"><i class="fa-solid fa-pen-to-square"></i>&nbsp; <%= lang["New-Email"] %></label>
+                <input type="email", id="newemail", name="newemail" required></input>
+                <button type="submit" id="rename"><i class="fa-solid fa-pen-to-square"></i>&nbsp; <%= lang["Edit-Account"] %></button>
+            </form>
+        </div>
+    </div>
+    <div class="footer">
+        <p><%= cloudname %> ©️ 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></p>
+    </div>
 </body>
 </html>
