--- a/views/delacc.ejs
+++ b/views/delacc.ejs
@@ -1,128 +1,152 @@
 <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="../css//style.css">
-            <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-              rel="stylesheet">
-              <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-            <title<%= cloudname %></title>
-        <style>body {
-            background-color: #d2d3db;
-            padding: 0;
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= cloudname %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+</head>
+<body>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+        body {
+            background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
+            width: 100vw;
+            height: 100vh;
             margin: 0;
         }
-        
 
-        
-        h1 {
-    color: #5D3FD3;
-    margin-top: 10%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: xxx-large;
-
-}
-        h2 {
-            color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: x-large;
-        
+        .flex-container {
+            display: flex;
+            width: 100%;
+            height: 96%;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
         }
-      
-      h3 {
-          color: #5D3FD3;;
-          display: flex;
-          margin-top: 20px;
-          justify-content: center;
-          align-items: center;
-          font-family: "Montserrat", sans-serif;
-          font-size: large;
-      
-      }
-      input[type="submit"] {
-        color: white;
-    height: 60px;
-    width: 250px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-    }
-    
-    input[type="submit"]:hover {
-        color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-    }
-    .footer {
-      position: fixed;
-      padding: 10px 10px 0px 10px;
-      bottom: 0;
-      width: 100%;
-      /* Height of the footer*/
-      height: 40px;
-      background: black;
-      color: white;
-      font-family: "Montserrat", sans-serif;
-      text-align: center;
-  }
 
-  ::-webkit-input-placeholder {
-    text-align: center;
-  }
-  
-  :-moz-placeholder {
-    text-align: center;
-  }
-  :-ms-input-placeholder {  
-    text-align: center; 
- }
+        .delacc {
+            width: 20%;
+            height: 20%;
+            background-color: #111111;
+            border-radius: 50px;
+            padding-bottom: 2%;
+            padding-right: 1%;
+            padding-left: 1%;
+            display: flex;
+            flex-flow: column nowrap;
+            align-items: center;
+        }
 
-        </style>
+        .delacc > h1, .delacc > h2, .delaccs > h3, h3 {
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            color: #1f74cc;
+        } 
+
+        form {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            flex-flow: column nowrap;
+            justify-content: center;
+        }
         
-        </head>
-        <body>
+        select {
+            width: 41%;
+            height: 21%;
+            display: flex;
+            margin: auto;
+            text-align: center;
+            border-radius: 20px;
+            font-size: 20px;
+            background-color: #1f74cc;
+            color: white;
+        }
+
+        button {
+            margin: auto;
+            margin-top: 1%;
+            height: 100%;
+            width: 40%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #1f74cc;
+            border-radius: 20px;
+            font-size: 20px;
+            color: white;
+            border: none;
+            transition-duration: 0.4s;
+        }
+
+        button:hover {
+            height: 101%;
+            width: 41%;
+            color:#1f74cc;
+            background-color: white;
+        }
+
+        .footer {
+            width: 40%;
+            height: 3%;
+            background-color: black;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        a:link, a:visited, a:hover, a:active {
+            color: #1f74cc;
+            text-decoration: none;
+            background-color: transparent;
+        }
+        /* Laptop support */
+        @media screen and (max-width: 1825px) {
+            .delacc {
+                width: 35%;
+                height: 30%;
+            }
+            .footer {
+                height: 5%;
+            }
+            .flex-container {
+                height: 94%;
+            }
+        }
+        /* Mobile support */
+        @media screen and (max-width: 426px) {
+            .delacc {
+                width: 90%;
+                height: 35%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
+    </style>
+    <div class="flex-container">
+        <div class="delacc">
             <h1><%= cloudname %></h1>
-            <h3><%= lang["Deletion-Confirm"] %></h3>
+            <h2 class="subtitle"><%= lang["Deletion-Confirm"] %></h2>
             <form action="/delmyaccount/" method="post">
-            <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
-            <input type="submit" value=<%= lang["Yes"] %>></input>
-            </form>
-            <form action="/">
-            <input type="submit" value=<%= lang["No"] %>></input>
-            </form>
-            <footer>
-                     <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
-        
-        </footer>
-        </body>
-        </html>
+                <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
+                <button type="submit"><%= lang["Yes"] %></button>
+              </form>
+              <form action="/">
+                <button type="submit"><%= lang["No"] %></button>
+              </form>
+        </div>
+    </div>
+    <div class="footer">
+        <p><%= cloudname %> ©️ 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></p>
+    </div>
+</body>
+</html>
