--- a/views/addrole.ejs
+++ b/views/addrole.ejs
@@ -2,202 +2,156 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/login.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title><%= cloudname %> | <%= lang["Add-Role"] %> </title>
+    <title><%= cloudname %> | <%= lang["Add-Role"] %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
         body {
-    background-color: #d2d3db;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+            background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
+        }
 
-h1 {
-    color: #5D3FD3;
-    margin-top: 10%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: xxx-large;
+        .flex-container {
+            display: flex;
+            width: 100%;
+            height: 96%;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+        }
 
-}
+        .addrole {
+            width: 20%;
+            height: 25%;
+            background-color: #111111;
+            border-radius: 50px;
+            align-items: center;
+            justify-content: center;
+            align-items: center;
+        }
 
-.subtitle {
-    color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: x-large;
-}
+        .addrole > h1, .addrole > h2, .addrole > h3, h3 {
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            color: #1f74cc;
+            line-height: 40%;
+        }
 
-.footer {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
-    bottom: 0;
-    width: 100%;
-    /* Height of the footer*/
-    height: 40px;
-    background: black;
-    color: white;
-    font-family: "Montserrat", sans-serif;
-    text-align: center;
-}
+        .addrole > form > label {
+            display: flex;
+            justify-content: center;
+            color: #1f74cc;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-label[for="storage"] {
-    color: #5D3FD3;
-    margin-top: 5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
+        input {
+            height: 20%;
+            border-radius: 40px;
+            border: none;
+            display: flex;
+            justify-self: center;
+            margin: auto;
+            font-size: 100%;
+            padding-left: 2%;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
 
-}
+       form {
+            width: 100%;
+            height: 50%;
+        }
 
-label[for="role"] {
-    color: #5D3FD3;
-    margin-top: 5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-}
+        button {
+            margin: auto;
+            height: 20%;
+            width: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #1f74cc;
+            border-radius: 20px;
+            font-size: 20px;
+            color: white;
+            border: none;
+            transition-duration: 0.4s;
+        }
 
-input[id="storage"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
+        button:hover {
+            height: 21%;
+            width: auto + 1%;
+            color:#1f74cc;
+            background-color: white;
+        }
 
-input[id="role"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
+        .footer {
+            width: 40%;
+            height: 3%;
+            background-color: black;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
 
+        a:link, a:visited, a:hover, a:active {
+            color: #1f74cc;
+            text-decoration: none;
+            background-color: transparent;
+        }
+        /* Laptop support */
+        @media screen and (max-width: 1825px) {
+            .addrole {
+                width: 35%;
+                height: 30%;
+            }
+            .footer {
+                height: 5%;
+            }
+            .flex-container {
+                height: 94%;
+            }
+        }
+        /* Mobile support */
+        @media screen and (max-width: 426px) {
+            .addrole {
+                width: 70%;
+                height: 25%;
+            }
 
-button[id="add"] {
-    color: white;
-    height: 60px;
-    width: 250px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-button[id="add"]:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-::-webkit-input-placeholder {
-    text-align: center;
-  }
-  
-  :-moz-placeholder {
-    text-align: center;
-  }
-  :-ms-input-placeholder {  
-    text-align: center; 
- }
-
- label[for="badge"] {     
-  color: #5D3FD3;
-    margin-top: 5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-}
-
-input[id="badge"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
     </style>
-    <h1><%= cloudname %></h1>
-    <h2 class="subtitle"><%= lang["Add-Role"] %></h2>
-    <form action="/addrole/" method="post">
-        <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
-        <label for="role"><span class="material-icons">edit</span>&nbsp;<%= lang["Role-Name"] %></label>
-        <input type="text" id="role" name="role" required></input>
-        <label for="storage"><span class="material-icons">storage</span>&nbsp;<%= lang["Amount-Of-Storage"] %></label>
-        <input type="text", id="storage", name="storage" required placeholder="128 MB"></input>
-        <label for="badge"><span class="material-icons">verified</span>&nbsp;<%= lang["Badge-URL"] %></label>
-        <input type="text", id="badge", name="badge"></input>
-        <button type="submit" id="add"><span class="material-icons">add</span>&nbsp;<%= lang["Add-Role"] %></button>
-    </form>
-    <footer>
-        <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
-    
-    </footer>
+    <div class="flex-container">
+        <div class="addrole">
+            <h1><%= cloudname %></h1>
+            <h2 class="subtitle"><%= lang["Add-Role"] %> </h2>
+            <form action="/addrole/" method="post">
+                <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
+                <label for="role"><i class="fa-solid fa-pen-to-square"></i>&nbsp;<%= lang["Role-Name"] %></label>
+                <input type="text" id="role" name="role" required></input>
+                <label for="storage"><i class="fa-solid fa-database"></i>&nbsp;<%= lang["Amount-Of-Storage"] %></label>
+                <input type="text", id="storage", name="storage" required placeholder="128 MB"></input>
+                <label for="badge"><i class="fa-solid fa-certificate"></i>&nbsp;<%= lang["Badge-URL"] %></label>
+                <input type="text", id="badge", name="badge"></input>
+                <button type="submit" id="add"><i class="fa-solid fa-plus"></i>&nbsp;<%= lang["Add-Role"] %></button>
+            </form>
+        </div>
+    </div>
+    <div class="footer">
+        <p><%= cloudname %> ©️ 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></p>
+    </div>
 </body>
 </html>
